deploy: 3e491330eb458b035e54b0f20a845cca95ae14f0

--- a/projects/index.html
+++ b/projects/index.html
@@ -53,16 +53,8 @@
     <div class="content">
         <p><em>Active development projects tracked via <a rel="external" href="https://github.com/CGutt-hub">GitHub</a>. My open backoffice for collaborative science.</em></p>
 <hr />
-<h3 id="paperfinder">paperFinder</h3>
-<p><strong>Language:</strong> Python<br />
-<strong>Last updated:</strong> 2026-02-18</p>
-<details>
-<summary>View README</summary>
-</details>
-<p><a rel="external" href="https://github.com/CGutt-hub/paperFinder">View on GitHub →</a></p>
-<hr />
 <h3 id="5ha99y">5ha99y</h3>
-<p><strong>Language:</strong> JavaScript<br />
+<p><strong>Language:</strong> HTML<br />
 <strong>Last updated:</strong> 2026-02-18</p>
 <details>
 <summary>View README</summary>
@@ -199,6 +191,14 @@
 </ul>
 </details>
 <p><a rel="external" href="https://github.com/CGutt-hub/5ha99y">View on GitHub →</a></p>
+<hr />
+<h3 id="paperfinder">paperFinder</h3>
+<p><strong>Language:</strong> Python<br />
+<strong>Last updated:</strong> 2026-02-18</p>
+<details>
+<summary>View README</summary>
+</details>
+<p><a rel="external" href="https://github.com/CGutt-hub/paperFinder">View on GitHub →</a></p>
 <hr />
 <h3 id="emotiview">EmotiView</h3>
 <p><strong>Language:</strong> Nextflow<br />
