--- a/paper-finder/index.html
+++ b/paper-finder/index.html
@@ -475,15 +475,7 @@
             </section>
 
             <!-- Empty state -->
-            <section id="empty-state">
-                <h3>Try searching for:</h3>
-                <div class="example-buttons">
-                    <button class="tag" data-query="transformer attention mechanisms">Transformers</button>
-                    <button class="tag" data-query="brain-computer interface EEG">BCI & EEG</button>
-                    <button class="tag" data-query="embodied cognition consciousness">Embodied Cognition</button>
-                    <button class="tag" data-query="federated learning privacy">Federated Learning</button>
-                </div>
-            </section>
+            <section id="empty-state" class="hidden"></section>
         </div>
     </main>
 
