deploy: 716f4eaecea4a45a175c213701928e31e0fc398b

--- a/contact/index.html
+++ b/contact/index.html
@@ -53,6 +53,7 @@
     <div class="content">
         <h2 id="get-in-touch">Get in Touch</h2>
 <p>Have a question or want to collaborate? Send me a message using the form below:</p>
+<div class="card">
 <form id="contact-form" action="https://api.web3forms.com/submit" method="POST" class="contact-form">
 <input type="hidden" name="access_key" value="2cb0577f-8acd-46d2-a940-3d47ff9a507d">
 <input type="hidden" name="redirect" value="https://cgutt-hub.github.io/5ha99y/contact">
@@ -77,6 +78,7 @@
 </div>
 <p><button type="submit" class="submit-btn">Send Message</button></p>
 </form>
+</div>
     </div>
 </article>
 
