--- a/projects/index.html
+++ b/projects/index.html
@@ -54,7 +54,7 @@
         <p><em>Active development projects tracked via <a rel="external" href="https://github.com/CGutt-hub">GitHub</a>. My open backoffice for collaborative science.</em></p>
 <hr />
 <h3 id="5ha99y">5ha99y</h3>
-<p><strong>Language:</strong> HTML<br />
+<p><strong>Language:</strong> JavaScript<br />
 <strong>Last updated:</strong> 2026-02-18</p>
 <details>
 <summary>View README</summary>
