deploy: e0a59f12df584300c5dbbf6261c800db266958f5

--- a/projects/index.html
+++ b/projects/index.html
@@ -26,6 +26,7 @@
                         <a href="#" class="dropdown-trigger">tools ▾</a>
                         <div class="dropdown-menu">
                             <a href="https://cgutt-hub.github.io/5ha99y/paper-finder">Paper Finder</a>
+                            <a href="https://cgutt-hub.github.io/5ha99y/analysis-toolbox">Analysis Toolbox</a>
                         </div>
                     </div>
                     <a href="https://cgutt-hub.github.io/5ha99y/blog">blog</a>
@@ -54,7 +55,7 @@
         <p><em>Active development projects tracked via <a rel="external" href="https://github.com/CGutt-hub">GitHub</a>. My open backoffice for collaborative science.</em></p>
 <hr />
 <h3 id="5ha99y">5ha99y</h3>
-<p><strong>Language:</strong> JavaScript<br />
+<p><strong>Language:</strong> HTML<br />
 <strong>Last updated:</strong> 2026-02-18</p>
 <details>
 <summary>View README</summary>
