--- a/header.html
+++ b/header.html
@@ -11,6 +11,7 @@
                     <a href="#" class="dropdown-trigger">tools ▾</a>
                     <div class="dropdown-menu">
                         <a href="https://cgutt-hub.github.io/5ha99y/paper-finder/">Paper Finder</a>
+                        <a href="https://cgutt-hub.github.io/5ha99y/analysis-toolbox/">Analysis Toolbox</a>
                     </div>
                 </div>
                 <a href="https://cgutt-hub.github.io/5ha99y/blog/">blog</a>
