feat: add Survey Workbench link to header and create survey workbench page

--- a/static/header.html
+++ b/static/header.html
@@ -12,6 +12,7 @@
                     <div class="dropdown-menu">
                         <a href="https://cgutt-hub.github.io/5ha99y/paper-finder/">Paper Finder</a>
                         <a href="https://cgutt-hub.github.io/5ha99y/analysis-toolbox/">Analysis Toolbox</a>
+                        <a href="https://cgutt-hub.github.io/5ha99y/survey-workbench/">Survey Workbench</a>
                     </div>
                 </div>
                 <a href="https://cgutt-hub.github.io/5ha99y/blog/">blog</a>
