feat: add language toggle to header for improved accessibility

--- a/static/header.html
+++ b/static/header.html
@@ -20,6 +20,11 @@
             </nav>
         </div>
         <div class="header-right">
+            <div class="toggle-group">
+                <a href="https://cgutt-hub.github.io/5ha99y/" class="lang-link active">EN</a>
+                <span class="toggle-separator">|</span>
+                <a href="https://cgutt-hub.github.io/5ha99y/de/" class="lang-link">DE</a>
+            </div>
             <button id="theme-toggle" class="theme-switch" aria-label="Toggle theme">
                 <span class="theme-icon">☀️</span>
             </button>
