--- a/paper-finder/index.html
+++ b/paper-finder/index.html
@@ -400,6 +400,19 @@
 
             <p>Export directly to Zotero, download BibTeX citations, or save as JSON for further analysis. Whether you're a researcher staying current with your field or exploring new areas, Paper Finder streamlines the discovery process so you can focus on what matters: reading and understanding the research.</p>
 
+            <h2>Core Capabilities</h2>
+
+            <ul>
+                <li><strong>Multi-Source Search</strong> — Parallel queries across arXiv and Semantic Scholar for comprehensive coverage</li>
+                <li><strong>Semantic Ranking</strong> — OpenAI embeddings rank results by meaning, not just keyword overlap</li>
+                <li><strong>Query Expansion</strong> — AI-powered refinement to broaden or sharpen your search automatically</li>
+                <li><strong>Research Gap Analysis</strong> — Identify underexplored areas and emerging trends from your results</li>
+                <li><strong>Citation Filtering</strong> — Filter by year, citation count, and availability of full PDFs</li>
+                <li><strong>Zotero Integration</strong> — Export selected papers directly to your Zotero library with metadata</li>
+                <li><strong>BibTeX & JSON Export</strong> — Download citations in standard formats for LaTeX or further processing</li>
+                <li><strong>CLI Automation</strong> — Schedule recurring searches via GitHub Actions or cron for continuous monitoring</li>
+            </ul>
+
             <blockquote>
                 <strong>Note:</strong> This is a <strong>testing interface</strong> for one-time searches. 
                 For continuous monitoring and batch downloads, install the 
