--- a/paper-finder/index.html
+++ b/paper-finder/index.html
@@ -425,6 +425,9 @@
                     <a href="https://github.com/CGutt-hub/paperFinder" target="_blank" rel="noopener" style="display: inline-block;">
                         <button type="button" style="background: var(--bg-tertiary); color: var(--text-primary);">View on GitHub</button>
                     </a>
+                    <a href="#search-input" style="display: inline-block;">
+                        <button type="button" style="background: var(--bg-tertiary); color: var(--text-primary);">Try It Online</button>
+                    </a>
                 </div>
 
                 <p style="margin-top: 1.5rem; font-size: var(--font-size-sm); color: var(--text-muted);">
@@ -433,10 +436,6 @@
                     <strong>Status:</strong> Active development
                 </p>
             </div>
-
-            <h2>Try It Online</h2>
-
-            <p>Use the search interface below for one-time queries. For recurring searches, use the CLI tool above.</p>
 
             <!-- Search -->
             <div class="card">
